--- a/Misc/grpa.ipynb
+++ b/Misc/grpa.ipynb
@@ -932,6 +932,698 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import os\n",
+    "import random\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "\n",
+    "def seize(boats):\n",
+    "    # Write your code here\n",
+    "    res = 0\n",
+    "    for i in range(0,len(boats)):\n",
+    "        if i % 2 ==0:\n",
+    "            res = res+ boats[i]\n",
+    "            print(res)\n",
+    "            \n",
+    "    return res\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "11\n",
+      "14\n",
+      "29\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seize([6,\n",
+    "2,\n",
+    "5,\n",
+    "10,\n",
+    "3,\n",
+    "2,\n",
+    "15])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-6\n",
+      "-20\n",
+      "-25\n",
+      "-24\n",
+      "-22\n",
+      "-31\n",
+      "-28\n",
+      "-31\n",
+      "-25\n",
+      "-14\n",
+      "-24\n",
+      "-33\n",
+      "-20\n",
+      "-24\n",
+      "-19\n",
+      "-33\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!/bin/python3\n",
+    "\n",
+    "import math\n",
+    "import os\n",
+    "import random\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "\n",
+    "    arr = []\n",
+    "\n",
+    "    for _ in range(6):\n",
+    "        arr.append(list(map(int, input().rstrip().split())))\n",
+    "\n",
+    "        \n",
+    "row = len(arr)//2\n",
+    "col = len(arr[0])//2\n",
+    "for i in range(row+1):\n",
+    "    for j in range(col+1):\n",
+    "        val = arr[i][j]+arr[i][j+1]+arr[i][j+2]+arr[i+1][j+1]+arr[i+2][j]+arr[i+2][j+1]+arr[i+2][j+2]\n",
+    "        print(val)\n",
+    "        \n",
+    "        if val >= res:\n",
+    "            res = val\n",
+    "        \n",
+    "\n",
+    "            \n",
+    "print(res)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([(3, 5)], [3, 5, 7])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def Twin_Primes(n,m):\n",
+    "    a=[]\n",
+    "    res=[]\n",
+    "    for i in range(n,m+1):\n",
+    "        for j in range(2,i):\n",
+    "            if i%j == 0:\n",
+    "                break\n",
+    "        else:\n",
+    "            if i>2:\n",
+    "                a.append(i)\n",
+    "\n",
+    "    for i in range(0,len(a)-1,2):\n",
+    "        res.append((a[i],a[i+1]))\n",
+    "\n",
+    "    return res,a\n",
+    "\n",
+    "Twin_Primes(2,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3\n",
+      "2 4\n",
+      "3 5\n",
+      "4 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4]\n",
+    "\n",
+    "for i in range(len(a)):\n",
+    "    print(a[i], a[i]+2)\n",
+    "\n",
+    "    # print((a[i], a[j]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 125\n",
+    "a = bin(n)\n",
+    "binary = a[2:]\n",
+    "binary = str(binary)\n",
+    "\n",
+    "for i in range(len(binary)):\n",
+    "    if binary[i] == '0':\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(binary)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (857925508.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [1]\u001b[1;36m\u001b[0m\n\u001b[1;33m    i = int(input()):\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cook your dish here\n",
+    "t = int(input())\n",
+    "\n",
+    "for a in range(t):\n",
+    "    \n",
+    "    i = int(input()):\n",
+    "        \n",
+    "        if i < 51:\n",
+    "            print('LEFT')\n",
+    "        elif  50 < i < 101:\n",
+    "            print('RIGHT')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def prime(n):\n",
+    "    lst=[]\n",
+    "    for i in range(1,n+1):\n",
+    "        if  n % i != 0 and n > 2:\n",
+    "            lst.append(i)\n",
+    "    return lst\n",
+    "\n",
+    "prime(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n",
+      "5\n",
+      "5\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "for i in range(1,n+1):\n",
+    "    for j in range(1,i+1):\n",
+    "        if i % j != 0 and n > 2:\n",
+    "            print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# prime number from 1 to n\n",
+    "\n",
+    "n = int(input())\n",
+    "for i in range(1,n+1):\n",
+    "    for j in range(2,i):\n",
+    "        if i % j == 0:\n",
+    "            break\n",
+    "    else:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(5, 11), (7, 9)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def prime(n):\n",
+    "    if n <2:\n",
+    "        return False\n",
+    "    for i in range(2, n//2+1):\n",
+    "        if n%i == 0:\n",
+    "            return False\n",
+    "        return True\n",
+    "        \n",
+    "def Goldbach(n):\n",
+    "    res = []\n",
+    "    for i in range((n//2)+1):\n",
+    "        if prime(i) == True:\n",
+    "            if prime(n-i) == True:\n",
+    "                res.append((i, n-i))\n",
+    "    return res\n",
+    "            \n",
+    "n=int(input())\n",
+    "print(sorted(Goldbach(n)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def odd_one(L):\n",
+    "  P = {}\n",
+    "  for elem in L:\n",
+    "    if type(elem) not in P:\n",
+    "      P[type(elem)] = 0\n",
+    "    P[type(elem)] += 1\n",
+    "  for key, value in P.items():\n",
+    "    if value == 1:\n",
+    "      return key.__name__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'float'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "odd_one([1, 2, 3.4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Triangle:\n",
+    "    def __init__(self, a, b, c):\n",
+    "        self.a = a\n",
+    "        self.b = b\n",
+    "        self.c = c\n",
+    "\n",
+    "    def Is_valid(self):\n",
+    "        if self.a + self.b > self.c and self.a + self.c > self.b and self.b + self.c > self.a:\n",
+    "            return 'Invalid'\n",
+    "        else:\n",
+    "            return 'Valid'\n",
+    "    def Side_Classification(self):\n",
+    "        if self.Is_valid() == 'Valid':\n",
+    "            if self.a == self.b == self.c:\n",
+    "                return 'Equilateral'\n",
+    "            elif self.a == self.b or self.a == self.c or self.b == self.c:\n",
+    "                return 'Isosceles'\n",
+    "            else:\n",
+    "                return 'Scalene'\n",
+    "\n",
+    "    def Angle_Classification(self):\n",
+    "            if self.Is_valid() == 'Valid':\n",
+    "                if self.a**2 + self.b**2 == self.c**2 or self.a**2 + self.c**2 == self.b**2 or self.b**2 + self.c**2 == self.a**2:\n",
+    "                    return 'Right'\n",
+    "                elif self.a**2 + self.b**2 > self.c**2 or self.a**2 + self.c**2 > self.b**2 or self.b**2 + self.c**2 > self.a**2:\n",
+    "                    return 'Acute'\n",
+    "                else:\n",
+    "                    return 'Obtuse'\n",
+    "            else:\n",
+    "                return 'Invalid'\n",
+    "    def Area(self):\n",
+    "        if self.Is_valid() == 'Valid':\n",
+    "            s = (self.a + self.b + self.c)/2\n",
+    "            return (s*(s-self.a)*(s-self.b)*(s-self.c))**0.5\n",
+    "        else:\n",
+    "            return 'Invalid'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binarySearchIndexAndComparisons(L, k):\n",
+    "    s = len(L)\n",
+    "    if (s<1):\n",
+    "        return (False, 0)\n",
+    "\n",
+    "    left = 0\n",
+    "    right = s-1\n",
+    "    count = 0\n",
+    "    while (left <= right):\n",
+    "        count += 1\n",
+    "        mid = (left + right)//2\n",
+    "        if (L[mid] == k):\n",
+    "            return (True, count)\n",
+    "        elif (L[mid] > k):\n",
+    "            right = mid - 1\n",
+    "        else:\n",
+    "            left = mid + 1\n",
+    "    return (False, count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from operator import index\n",
+    "\n",
+    "\n",
+    "def sortInRange(L, r):\n",
+    "\n",
+    "    countDict = dict.fromkeys(range(r),0)\n",
+    "    for num in L:\n",
+    "        countDict[i] += 1\n",
+    "\n",
+    "    index = 0\n",
+    "    for key in countDict.keys():\n",
+    "        for i in range(countDict[key]):\n",
+    "            L[index] = key\n",
+    "            index += 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_end(self,data):\n",
+    "    newnode = Node(data)\n",
+    "    newnode.prev = self.last\n",
+    "    if self.head == None:\n",
+    "        self.head = newnode\n",
+    "        self.last = newnode\n",
+    "    else:\n",
+    "        self.last.next = newnode\n",
+    "        self.last = newnode\n",
+    "def delete_end(self):\n",
+    "    if(self.head != None):\n",
+    "        if self.head == self.last:\n",
+    "            self.head = None\n",
+    "            self.last = None\n",
+    "        else:\n",
+    "            self.last = self.last.prev\n",
+    "            self.last.next = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hashfunction(self, data):\n",
+    "    i = 0\n",
+    "    key = (data % self.m + self.c1*i + self.c2*(i**2)) % self.m\n",
+    "    while self.hashtable(key)[key] != None and i < self.m:\n",
+    "        i += 1\n",
+    "        key = (data % self.m + self.c1*i + self.c2*(i**2)) % self.m\n",
+    "    return key\n",
+    "\n",
+    "def store_data(self, data):\n",
+    "    if self.hashtable.count(None) == 0:\n",
+    "        key = self.hashfunction(data)\n",
+    "        self.hashtable[key] = data\n",
+    "    else:\n",
+    "        print('Hash table is full')\n",
+    "\n",
+    "def display_hashtable(self):\n",
+    "    return self.hashtable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "sumn = 0\n",
+    "i = 10\n",
+    "\n",
+    "while i < 1:\n",
+    "    sum = sum + i\n",
+    "    sum = sum * 2\n",
+    "    i -=1\n",
+    "\n",
+    "print(sumn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = lambda n:1 if n <= 1 else n * f(n-1)\n",
+    "\n",
+    "g = f(4)\n",
+    "print(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ex(arr):\n",
+    "    temp = 0\n",
+    "    for x in arr: \n",
+    "        if x % 2 ==1:\n",
+    "            temp +=1\n",
+    "        else:\n",
+    "            temp = 0\n",
+    "        if temp == 3:\n",
+    "            return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ex([4,5,7,23,12])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def a(nums):\n",
+    "    has_pos = False\n",
+    "    has_neg = False\n",
+    "    for num in nums:\n",
+    "        has_pos = num > 0\n",
+    "        has_neg = num < 0\n",
+    "\n",
+    "    return (has_pos, has_neg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(False, True)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a([1,-1,-2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['-7', '1', '15', '2', '300']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sorted([\"1\", \"2\", \"15\", \"-7\", \"300\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_first_position(arr, fn):\n",
+    "    pos  = False\n",
+    "    for i in range(len(arr)):\n",
+    "       row = arr[i]\n",
+    "       for j in range(len(row)):\n",
+    "              if fn(row[j]):\n",
+    "                pos = (i, j)\n",
+    "                break\n",
+    "    return pos\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
